cleaning a few insignificant changes

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Raw_data/GENX_SD_Export_Waterlevel_2023-01-01_to_2023-12-31_derived_clean_btemps
 Raw_data/EVI
 figures
 analysis/scores.csv
+.httr-oauth
