--- a/.github/workflows/ML_forecasts.yml
+++ b/.github/workflows/ML_forecasts.yml
@@ -22,19 +22,19 @@ jobs:
     - name: Run lasso
       run: |
         R -e 'utils::install.packages("here")'
-        Rscript ./lasso/run_forecast.R
+        Rscript ./models/lasso/run_forecast.R
   
     - name: Run randomForest
       run: |
-        Rscript ./randomForest/run_forecast.R
+        Rscript ./models/randomForest/run_forecast.R
 
     - name: Run ridge
       run: |
-        Rscript ./ridge/run_forecast.R
+        Rscript ./models/ridge/run_forecast.R
 
     - name: Run met_lm_step
       run: |
-        Rscript ./met_lm_step/run_forecast.R
+        Rscript ./models/met_lm_step/run_forecast.R
   
     - name: Commit and push
       run: |
@@ -42,4 +42,5 @@ jobs:
         git config --global user.email 'aslewis@vt.edu'
         git add .
         git commit -m "Automated ML forecasts" || echo "No changes to commit"
+        git pull
         git push
