--- a/.github/workflows/baseline_forecasts.yml
+++ b/.github/workflows/baseline_forecasts.yml
@@ -19,9 +19,12 @@ jobs:
       with:
         fetch-depth: 0
         
+    - name: Load packages
+      run: |
+        Rscript ./packages.R
+
     - name: Run climate_window
       run: |
-        R -e 'utils::install.packages("here")'
         Rscript ./models/climate_window/run_forecast.R
         
     - name: Run climatology
