--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -13,13 +13,13 @@ jobs:
       
     steps:
     - name: Checkout repo
-      - uses: actions/checkout@v4
+      uses: actions/checkout@v4
+      
+    - name: Build image
+      run: docker build -t main . 
 
-      - name: Build image
-        run: docker build -t main . 
-
-      - name: execute
-        run: |
-          Rscript ./dashboard lightweight/run_dashboard.R
-          -e TOKEN=${{secrets.TOKEN}} 
-          -e SECRET=${{secrets.SECRET}} 
+    - name: execute
+      run: |
+        Rscript ./dashboard lightweight/run_dashboard.R
+        -e TOKEN=${{secrets.TOKEN}} 
+        -e SECRET=${{secrets.SECRET}} 
