--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -17,6 +17,6 @@ jobs:
       
     - name: run_dashboard
       run: |
+        install.packages(c("shiny", "rsconnect"), type = "binary")
+        Rscript -e "rsconnect::setAccountInfo(name='aslewis', token=${{secrets.TOKEN}}, secret=${{secrets.SECRET}})"
         Rscript ./dashboard lightweight/run_dashboard.R
-        -e TOKEN=${{secrets.TOKEN}} 
-        -e SECRET=${{secrets.SECRET}} 
