--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -12,9 +12,15 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
+
+    - name: load packages
+      run: install.packages(c("shiny", "rsconnect"), type = "binary")
+      shell: Rscript {0}
       
-    - name: run_dashboard
+    - name: set auth
       run: |
-        install.packages(c("shiny", "rsconnect"), type = "binary"))
         Rscript -e "rsconnect::setAccountInfo(name='aslewis', token=${{secrets.TOKEN}}, secret=${{secrets.SECRET}})"
+
+    - name: run dashboard
+      run: |
         Rscript ./dashboard lightweight/run_dashboard.R
