--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: load packages
-      run: install.packages(c("shiny", "rsconnect"), type = "binary")
+      run: install.packages(c("shiny", "rsconnect"))
       shell: Rscript {0}
       
     - name: set auth
