--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: rocker/geospatial
+      image: rocker/tidyverse:4.2
       
     steps:
     - name: Checkout repo
