--- a/.github/workflows/load_new_data.yml
+++ b/.github/workflows/load_new_data.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: rocker/tidyverse:4.2
+      image: rocker/geospatial
     permissions:
       contents: write
       
