--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -23,4 +23,4 @@ jobs:
 
     - name: run dashboard
       run: |
-        Rscript ./dashboard lightweight/run_dashboard.R
+        Rscript "./dashboard lightweight/run_dashboard.R"
